<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:id="@+id/rdGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:orientation="horizontal"
        android:weightSum="2">


        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/rdAntes"
            android:text="@string/antes"
            android:checked="true"
            android:layout_weight="1"/>


        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/rdDepois"
            android:text="@string/depois"
            android:layout_weight="1"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rdGroup"
        android:weightSum="2">

        <TextView
            android:id="@+id/btnCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/cancelar" />

        <TextView
            android:id="@+id/btnConfirmar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/confirmar" />

    </LinearLayout>

</RelativeLayout>