<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.logics.flavis.features.detalhe.DetalheOSActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDetalhe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:titleTextColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarDetalhe">

        <LinearLayout
            android:id="@+id/activity_detalhe_os"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/endereco"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/textEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/background_retangular_cinza"
                android:padding="2dp"
                android:text="@string/format_endereco" />


            <TextView
                android:id="@+id/textIsPmoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/pmoc"
                android:textAllCaps="true"
                android:textColor="@color/greenDark"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/osSemPmocLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/ocorrencia"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textOcorrencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="4dp"
                    android:text="Ocorrencia"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/fotos_os"
                    android:textSize="12sp" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerFotosOs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/background_retangular_cinza"
                    android:padding="4dp"
                    android:scrollbars="none" />

                <EditText
                    android:id="@+id/edtRelatorioOS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/relatorio_avaliacao"
                    android:inputType="textMultiLine"
                    android:maxLines="6" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/viewPmoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/execucoes_procedimentos"
                    android:textSize="12sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerEquipamentos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />
            </LinearLayout>


            <CheckBox
                android:id="@+id/chkEncerrada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/encerrado" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edtJustificativa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/justificativa" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edtNomeReceptor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome_receptor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputRgReceptor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/rgReceptor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rg_receptor" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/assinaturaView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgAssinatura"
                    android:layout_width="120dp"
                    android:layout_height="70dp"
                    android:src="@drawable/icone_assinatura" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/toque_para_assinatura" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnFinalizar"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finalizar"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_check" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>

