<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgItemCompleto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_check"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textExecucaoProcedimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:background="?attr/selectableItemBackground"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/execucao_procedimento_format" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/viewExecucaoProcedimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:background="@drawable/background_procedimento"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/fotos_procedimento"
            android:textSize="12sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerFotosProcedimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_retangular_cinza"
            android:padding="4dp" />


        <EditText
            android:id="@+id/editRelatorioExecucao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/relatorio_avaliacao"
            android:inputType="textMultiLine"
            android:maxLines="6" />

        <LinearLayout
            android:id="@+id/viewValores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTituloPropriedade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerValores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSalvarProcedimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:textColor="@android:color/white"
            android:theme="@style/BtnConfirmarTheme" />
    </LinearLayout>


</LinearLayout>